cabal-version:       2.4

name:                optics-exercises
version:             0.1.0.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
build-type:          Simple

executable optics-exercises
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , aeson
                     , containers
                     , lens
                     , lens-aeson
                     , mtl
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
